# fantextedit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: windows-compat.yml
src/: main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: app.js  index.html  styles.css
